--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
     "json-server": "^1.0.0-beta.2",
+    "ldrs": "^1.0.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
