--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch ./src/data/db.json --port 5000"
+    "server": "json-server --watch ./src/data/db.json --port 5000",
+    "dev":"npm start--port 3050"
   },
   "eslintConfig": {
     "extends": [
