--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.4",
+    "js-cookie": "^3.0.5",
     "json-server": "^1.0.0-beta.2",
     "ldrs": "^1.0.2",
     "react": "^18.3.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -25,7 +27,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server --watch ./src/data/db.json --port 5000",
-    "dev":"npm start--port 3050"
+    "dev": "npm start--port 3050"
   },
   "eslintConfig": {
     "extends": [
